Finalizando Estrutura do Projeto e a Estilização

--- a/src/global.styles.css
+++ b/src/global.styles.css
@@ -9,8 +9,16 @@
   --gray-900: #121214;
 
   --green-500: #00875f;
+  --green-300: #00B37E;
+
+  --red-500: #F75A68;
 }
 
+
+:focus {
+  outline: transparent;
+  box-shadow: 0 0 0 2px var(--green-300);
+}
 
 * {
   margin: 0;
