--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -1,3 +1,125 @@
 .post {
-  
+  padding: 2.5rem;
+  background-color: var(--gray-800);
+  border-radius: 8px;
+}
+
+
+/* Se Tiver outro class com post sera aplicada esse estilo, ou seja, somente se eu tiver mais de um post */
+.post + .post {
+  margin-top: 2rem;
+}
+
+.content {
+  line-height: 1.6;
+  color: var(--gray-300);
+  margin-top: 1.5rem;
+}
+
+.content p {
+  margin-top: 1rem;
+}
+
+.content a {
+  font-weight: bold;
+  text-decoration: none;
+  color: var(--green-500);
+}
+
+.content a:hover {
+  color: var(--green-300);
+}
+
+.header {
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header time {
+  font-size: 0.875rem;
+  color: var(--gray-400);
+}
+
+.author {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.authorInfo {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.authorInfo strong {
+  color: var(--gray-100);
+  line-height: 1.6;
+}
+
+.authorInfo span {
+  color: var(--gray-400);
+  font-size: 0.875rem;
+  line-height: 1.6;
+}
+
+/* Campo de Comentario */
+
+.commentForm {
+  width: 100%;
+  margin-top: 1.5rem;
+  padding-top: 1.5rem;
+  border-top: 1px solid var(--gray-600);
+}
+
+.commentForm > strong {
+  line-height: 1.6;
+  color: var(--gray-100);
+}
+
+.commentForm textarea {
+  width: 100%;
+  background-color: var(--gray-900);
+  border: 0;
+  resize: none;
+  height: 6rem;
+  padding: 1rem;
+  border-radius: 8px;
+  color: var(--gray-100);
+  line-height: 1.4;
+  margin-top: 1rem;
+}
+
+.commentForm footer {
+  visibility: hidden;
+  max-height: 0;
+}
+
+
+/* assim que eu realizar o focus na textarea o botão recebera essas propriedades e aparecera. */
+.commentForm:focus-within footer {
+  visibility: visible;
+  max-height: none;
+}
+
+.commentForm button[type="submit"] {
+  margin-top: 1rem;
+  background: var(--green-500);
+  color: var(--white);
+  padding: 1rem 1.5rem;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+  border: 0;
+  transition: background-color 0.1s;
+}
+
+.commentForm button:hover {
+  background-color: var(--green-300);
+}
+
+
+.commentList {
+  margin-top: 2rem;
 }
